--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="files">
-        <a href="/server/appleskin-fabric-mc1.20.1-2.5.1.jar" class="hg"><img src="download.png" alt="" class="download"></a>
-        <a href="/mods.zip" class="hy">Minecraft Server Mods</a><br>
+        <a href="/server/appleskin-fabric-mc1.20.1-2.5.1.jar" class="hg" download><img src="download.png" alt="" class="download"></a>
+        <a href="/mods.zip" class="hy" download>Minecraft Server Mods</a><br>
         <h3>1.20.1</h3>
     </div>
     <script src="script.js"></script>
